--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body style="background-color: #1abc9c">
-    <h1 style="padding-top: 20%; padding-bottom: 20%; text-align: center;"> entrainement </h1>
+    <h1 style="padding-top: 20%; padding-bottom: 20%; text-align: center; color: white"> entrainement </h1>
 </body>
 </html>
